--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ h1 {
 <hr>
 
 <h2>PORTFOLIO</h2>
-<p>Resize the browser window to see the responsive effect.</p>
+<p>Projetos para você se inspirar e reaproveitar o código </p>
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
