--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@ h1 {
 <!-- MAIN (Center website) -->
 <div class="main">
 
-<h1>Loja.pedroaf0.cf</h1>
+<h1>Loja.pedroaf0.tk</h1>
 <hr>
 
 <h2>PORTFOLIO</h2>
-<p>Projetos para você se inspirar e reaproveitar o código </p>
+<p>Aqui você encontra produtos digitais a um preço realmente justo</p>
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
@@ -85,24 +85,28 @@ h1 {
   <div class="column">
     <div class="content">
       <img src="http://repository-images.githubusercontent.com/259762114/50ca7c00-d3da-11ea-9301-70689c05f732" alt="Mountains" style="width:100%">
-      <h3>Cardapio-Bot</h3>
+      <h3>[Código] Cardapio-Bot</h3>
       <p>Bot que posta semanalmente o cardápio do refeitório do IFRS campus sertão</p>
     </div>
   </a>
   </div>
+  <a style="color: black; text-decoration: none;" href="/Produtos/Hi-Tech.html">
+  <div class="column">
+    <div class="content">
+    <img src="/hi-tech.png" alt="Nature" style="width:100%">
+      <h3>[Música] B R U U - Hi-Tech (Official Audio) #UNNF</h3>
+      <p>Aqui você compra a versão sem vinheta sem </p>
+    </div>
+  </div>
+</a>
+
   <div class="column">
     <div class="content">
     <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
       <h3>My Work</h3>
       <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
     </div>
-  </div>
-  <div class="column">
-    <div class="content">
-    <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
-      <h3>My Work</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-    </div>
+  
   </div>
   <div class="column">
     <div class="content">
