--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+<script src='a076d05399.js' crossorigin='anonymous'></script>
 
 <style>
 * {
@@ -70,7 +70,7 @@ h1 {
 }
 
 #myInput {
-  background-image: url('/Produtos/img/searchicon.png');
+  background-image: url('./Produtos/img/searchicon.png');
   background-position: 10px 12px;
   background-repeat: no-repeat;
   width: 100%;
