--- a/Implates-para-copiar.html
+++ b/Implates-para-copiar.html
@@ -81,9 +81,10 @@ h1 {
   margin-bottom: 12px;
 }
 
+
 .wp {
-  /* Existing styling */
   font-family: Arial, Helvetica, sans-serif;
+
   background: #25D366;
   color: #ffffff;
   display: inline-block;
@@ -93,21 +94,18 @@ h1 {
   display: grid;
   grid-template-columns: auto auto auto auto;
   width: 100%;
-  align-items: center;
+  align-items: center; 
   justify-content: center;
+
   box-shadow: 0 0 0 3px;
+
   text-decoration: none;
   cursor: pointer;
 }
+.preço{
+  font-size: large;
+  color: #239e50;
 
-/* Additional styling for the copy button */
-.wp.copy {
-  background-color: #007bff; /* Blue color for copying */
-  padding: 8px 15px; /* Adjust padding for the smaller button size */
-}
-
-.wp.copy i {
-  margin-right: 5px; /* Add some space between icon and text */
 }
 
 </style>
@@ -153,18 +151,19 @@ function carregarprodutos() {
     console.log(response);
     for (let index = 0; index < response.results.length; index++) {
       const produto = response.results[index];
-      
-document.getElementById('produtos').innerHTML += 
-`<div p="${produto.properties['Palavras-chave'].rich_text[0].plain_text}" class="column">
-  <div class="content">
-    <img class="p" src="${produto.properties['imagem'].files[0].name}"  style="width:100%">
-    <h3>${produto.properties['Nome'].title[0].plain_text}</h3>
-    <span class="wp copy" onclick="copyImage('${produto.properties['imagem'].files[0].name}')">
-      <i class="far fa-copy fa-2x"></i>
-      <span style="padding: 10px;">Copiar Imagem</span>
-    </span>
-  </div>
-</div>`;
+
+      document.getElementById('produtos').innerHTML += 
+      `<div p="${produto.properties['Palavras-chave'].rich_text[0].plain_text}" class="column">
+        <div class="content">
+          <img class="p" src="${produto.properties['imagem'].files[0].name}" alt="chá" style="width:100%">
+          <h3>${produto.properties['Nome'].title[0].plain_text}</h3>
+          <span class="wp" onclick="copyImage('${produto.properties['imagem'].files[0].name}')">
+            <i class="far fa-copy fa-2x"></i>
+            <span style="padding: 10px;">Copiar Imagem</span>
+          </span>
+        </div>
+      </div>`;
+    }
   })
   .catch(err => {
     console.error(err);
@@ -178,7 +177,7 @@ function copyImage(imageSrc) {
   dummyElement.select();
   document.execCommand('copy');
   document.body.removeChild(dummyElement);
-  
+
   Swal.fire({
     title: 'Imagem Copiada!',
     text: 'A imagem foi copiada para a área de transferência.',
