--- a/Implates-para-copiar.html
+++ b/Implates-para-copiar.html
@@ -152,8 +152,8 @@ function myFunction() {
       document.getElementById('produtos').innerHTML += 
       `<div class="column">
         <div class="content">
-          <img class="p" src="${imageLink}" alt="chá" style="width:100%">
-          <span class="wp copy" onclick="copyImage('${imageLink}')">
+          <img class="p" src="https://ruufpelbot.000webhostapp.com/Implantes/imagens/${imageLink}" style="width:100%">
+          <span class="wp copy" onclick="copyImage('https://ruufpelbot.000webhostapp.com/Implantes/imagens/${imageLink}')">
             <i class="far fa-copy fa-2x"></i>
             <span style="padding: 10px;">Copiar Imagem</span>
           </span>
